# mapage_types_viewer

./: Cargo.toml  LICENSE-MIT
src/: all_or_not.rs  all_or_not_supported_type_sub_contents.rs  all_or_not_type_instance_sub_contents.rs  all_or_not_whatever_sub_contents.rs  application_state.rs  command_error_sub_contents.rs  command_result_sub_contents.rs  command_shared.rs  command_sub_contents.rs  main.rs  optional_value_sub_contents.rs  params_sub_contents.rs  streamed_message_etc.rs  streamed_message_sub_contents.rs  supported_type_sub_contents.rs  tab_indenter.rs  type_instance_sub_contents.rs  whatever_shared.rs  whatever_sub_contents.rs  window_contents_state.rs
src/actors/: mapage_type_actor.rs  mod.rs
src/actors/output_processing/: client_outputter.rs  etc.rs  mod.rs  serde_json_processor.rs
src/widgets/: bool_dropdown.rs  format.rs  mapage_type.rs  mod.rs  streamed_message.rs  supported_type.rs  type_instance.rs  whatever.rs
